--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "M(MySQL)ERN project",
+  "description": "a project",
   "main": "index.js",
   "scripts": {
     "start": "node server"
